chore: update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,32 @@
+# Mac OS
+.DS_Store
+
+target/
+!.mvn/wrapper/maven-wrapper.jar
+
+# STS
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+
+# IntelliJ IDEA
+.idea
+*.iws
+*.iml
+*.ipr
+
+# NetBeans
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+.nb-gradle/
+logs/
+
 # Compiled class file
 *.class
 
@@ -9,6 +38,8 @@
 
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
+
+test_results/
 
 # Package Files #
 *.jar
