--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.flyway.user=user
 spring.flyway.password=qwerty
 spring.flyway.locations=filesystem:./db/migration
 spring.flyway.url=jdbc:h2:mem:booking;DB_CLOSE_DELAY=-1
+
+nanoid.key.size=12
