--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=booking
+
+# H2 Database (in-memory)
+spring.datasource.url=jdbc:h2:mem:booking-tst;DB_CLOSE_DELAY=-1
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=user
+spring.datasource.password=qwerty
+
+# H2 Console
+spring.h2.console.enabled=true
+
+#Flyway
+spring.flyway.url=jdbc:h2:mem:booking-tst;DB_CLOSE_DELAY=-1
+spring.flyway.user=user
+spring.flyway.password=qwerty
+spring.flyway.locations=filesystem:./db/migration
+
+nanoid.key.size=12
