--- a/build.gradle
+++ b/build.gradle
@@ -40,8 +40,11 @@ dependencies {
 
 	implementation("co.wosher:jnanoid-enhanced:${nanoId}")
 
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	testImplementation("org.springframework.boot:spring-boot-starter-test") {
+		exclude group: 'junit'
+	}
+	testImplementation("org.junit.jupiter:junit-jupiter-params")
+	testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 }
 
 tasks.named('test') {
