--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation("org.springframework.boot:spring-boot-starter-data-jpa")
+	implementation("org.springframework.boot:spring-boot-starter-validation")
 	implementation("org.flywaydb:flyway-core:${flywayCore}")
 	runtimeOnly("com.h2database:h2")
 
