--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
 
 plugins {
 	id 'java'
+	id 'jacoco'
 	id 'org.springframework.boot' version '3.5.6'
 	id 'io.spring.dependency-management' version '1.1.7'
 	id 'com.diffplug.spotless' version '7.2.1'
@@ -52,6 +53,7 @@ dependencies {
 
 tasks.named('test') {
 	useJUnitPlatform()
+	finalizedBy jacocoTestReport
 }
 
 tasks.named('check') {
@@ -60,3 +62,4 @@ tasks.named('check') {
 
 apply from: "gradle/spotless.gradle"
 apply from: "gradle/test.gradle"
+apply from: "gradle/jacoco.gradle"
