--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
 		flywayCore = "11.14.0"
 		nanoId = "main-SNAPSHOT"
 		springdoc = "2.8.13"
+		caffeine = "3.1.8"
 	}
 }
 
@@ -39,6 +40,7 @@ dependencies {
 	implementation("org.springframework.boot:spring-boot-starter-data-jpa")
 	implementation("org.springframework.boot:spring-boot-starter-validation")
 	implementation("org.flywaydb:flyway-core:${flywayCore}")
+	implementation("com.github.ben-manes.caffeine:caffeine:${caffeine}")
 	runtimeOnly("com.h2database:h2")
 
 	implementation("co.wosher:jnanoid-enhanced:${nanoId}")
